--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+    <title><i class="fa fa-scissors"></i> The Daily Comb</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM+Serif+Display">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
+h1,h2,h3,h4,h5,h6 {font-family: "DM+Serif+Display"}
 body {font-family: "Open Sans"}
 </style>
 </head>
@@ -38,7 +38,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Image header -->
   <header class="w3-display-container w3-wide" id="home">
-    <img class="w3-image" src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Legitimate Newspaper" width="1600" height="1060">
+    <img class="w3-image" src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Legitimate Newspaper" width="1200" height="800">
     <div class="w3-display-left w3-padding-large">
       <h1 class="w3-text-white">The</h1>
       <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>DAILY COMB</b></h1>
