--- a/public/index.html
+++ b/public/index.html
@@ -103,27 +103,27 @@ and is wrapped around the whole page content, except for the footer in this exam
         <ul class="w3-ul w3-hoverable w3-white">
           <li class="w3-padding-16">
             <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Combs</span>
+            <span class="w3-large">Chickens</span>
             <br>
-            <span>Sed mattis nunc</span>
+            <span>Chickens have new lease on life</span>
+          </li>
+          <li class="w3-padding-16">
+            <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <span class="w3-large">Round</span>
+            <br>
+            <span>They are all extremeley round lol</span>
           </li>
           <li class="w3-padding-16">
             <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Combs</span>
             <br>
-            <span>Praes tinci sed</span>
-          </li>
-          <li class="w3-padding-16">
-            <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Combs</span>
-            <br>
-            <span>Ultricies congue</span>
+            <span>Biggus Combus</span>
           </li>
           <li class="w3-padding-16">
             <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Image" class="w3-left w3-margin-right w3-sepia" style="width:50px">
-            <span class="w3-large">Combs</span>
+            <span class="w3-large">Cats</span>
             <br>
-            <span>Lorem ipsum dipsum</span>
+            <span>I love cats</span>
           </li>
         </ul>
       </div>
@@ -132,11 +132,11 @@ and is wrapped around the whole page content, except for the footer in this exam
       <!-- Advertising -->
       <div class="w3-white w3-margin">
         <div class="w3-container w3-padding w3-black">
-          <h4>Advertise</h4>
+          <h4>Jammin with James</h4>
         </div>
         <div class="w3-container w3-white">
           <div class="w3-container w3-display-container w3-light-grey w3-section" style="height:200px">
-            <span class="w3-display-middle">Your AD Here</span>
+            <span class="w3-display-middle">Please buy some jam</span>
           </div>
         </div>
       </div>
@@ -167,11 +167,11 @@ and is wrapped around the whole page content, except for the footer in this exam
         <div class="w3-row-padding w3-white">
           <div class="w3-col s6">
             <p><img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Combs" style="width:100%"></p>
-            <p><img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Jeans" style="width:100%"></p>
+            <p><img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Chickens" style="width:100%"></p>
           </div>
           <div class="w3-col s6">
             <p><img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Combs" style="width:100%" class="w3-grayscale"></p>
-            <p><img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Jeans" style="width:100%"></p>
+            <p><img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Chickens" style="width:100%"></p>
          </div>
         </div>
       </div>
