--- a/public/index.html
+++ b/public/index.html
@@ -55,8 +55,8 @@ and is wrapped around the whole page content, except for the footer in this exam
       <!-- Blog entry -->
       <div class="w3-container w3-white w3-margin w3-padding-large">
         <div class="w3-center">
-          <h3>TITLE HEADING</h3>
-          <h5>Title description, <span class="w3-opacity">May 2, 2016</span></h5>
+          <h3>Bellybutton Now Convex</h3>
+          <h5>Observers have been stunned by recent developments <span class="w3-opacity">July 2nd, 2023</span></h5>
         </div>
 
         <div class="w3-justify">
@@ -72,8 +72,8 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" style="width:90px;">
               </div>
               <div class="w3-col l10 m9">
-                <h4>George <span class="w3-opacity w3-medium">May 3, 2015, 6:32 PM</span></h4>
-                <p>Great Newspaper! Following</p>
+                <h4>Margaret <span class="w3-opacity w3-medium">July 2nd, 6:32 PM</span></h4>
+                <p>I do not enjoy this newspaper.</p>
               </div>
           </div>
         </div>
