--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Image header -->
   <header class="w3-display-container w3-wide" id="home">
-    <img class="w3-image" src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Legitimate Newspaper" width="800" height="200">
+    <img class="w3-image" src="comb.png" alt="Legitimate Newspaper" width="800" height="200">
     <div class="w3-display-left w3-padding-large">
       <h1 class="w3-text-white">The</h1>
       <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>DAILY COMB</b></h1>
@@ -56,23 +56,23 @@ and is wrapped around the whole page content, except for the footer in this exam
       <div class="w3-container w3-white w3-margin w3-padding-large">
         <div class="w3-center">
           <h3>Bellybutton Now Convex</h3>
-          <h5>Observers have been stunned by recent developments <span class="w3-opacity">July 2nd, 2023</span></h5>
+          <h5>Observers have been stunned by recent developments <span class="w3-opacity">July 4nd, 2023</span></h5>
         </div>
 
         <div class="w3-justify">
-          <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Girl Hat" style="width:100%" class="w3-padding-16">
-          <p><strong>Combs!</strong> Combs are great</p>
-          <p>Combs are great</p>
+          <img src="TDC4072023.png" alt="Daily Comb Issue 04 Jul 2023"> style="width:100%" class="w3-padding-16">
+          <p><strong>Bellybutton Edition</strong> Bellybuttons</p>
+          <p>Bellybuttons</p>
           <p class="w3-left"><button class="w3-button w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like</b></button></p>
           <p class="w3-right"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b> <span class="w3-tag w3-white">1</span></button></p>
           <p class="w3-clear"></p>
           <div class="w3-row w3-margin-bottom" id="demo1" style="display:none">
             <hr>
               <div class="w3-col l2 m3">
-                <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" style="width:90px;">
+                <img src="AstridAvatar.png" style="width:90px;">
               </div>
               <div class="w3-col l10 m9">
-                <h4>Margaret <span class="w3-opacity w3-medium">July 2nd, 6:32 PM</span></h4>
+                <h4>Astrid <span class="w3-opacity w3-medium">July 4nd, 6:32 PM</span></h4>
                 <p>I do not enjoy this newspaper.</p>
               </div>
           </div>
@@ -87,10 +87,10 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-col l4">
       <!-- About Card -->
       <div class="w3-white w3-margin">
-        <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Comb" style="width:100%" class="w3-grayscale">
+        <img src="comb.png" alt="Comb" style="width:100%" class="w3-grayscale">
         <div class="w3-container w3-black">
-          <h4>My Comb squad</h4>
-          <p>The team exploring combs</p>
+          <h4>The Combers</h4>
+          <p>The team exploring Herbert</p>
         </div>
       </div>
       <hr>
@@ -102,25 +102,25 @@ and is wrapped around the whole page content, except for the footer in this exam
         </div>
         <ul class="w3-ul w3-hoverable w3-white">
           <li class="w3-padding-16">
-            <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <img src="comb.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Chickens</span>
             <br>
             <span>Chickens have new lease on life</span>
           </li>
           <li class="w3-padding-16">
-            <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <img src="comb.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Round</span>
             <br>
             <span>They are all extremeley round lol</span>
           </li>
           <li class="w3-padding-16">
-            <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <img src="comb.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Combs</span>
             <br>
             <span>Biggus Combus</span>
           </li>
           <li class="w3-padding-16">
-            <img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Image" class="w3-left w3-margin-right w3-sepia" style="width:50px">
+            <img src="comb.png" alt="Image" class="w3-left w3-margin-right w3-sepia" style="width:50px">
             <span class="w3-large">Cats</span>
             <br>
             <span>I love cats</span>
@@ -149,10 +149,10 @@ and is wrapped around the whole page content, except for the footer in this exam
         </div>
         <div class="w3-container w3-white">
           <p>
-            <span class="w3-tag w3-black w3-margin-bottom">Combs</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Cats</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
-            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Combs</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Chickens</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sweaters</span>
-            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Combs</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Bellybutton</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Accessories</span>
-            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Chickens</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Cats</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
+            <span class="w3-tag w3-black w3-margin-bottom">Combs</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Cats</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Jam</span>
+            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Combs</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Chickens</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Pasta</span>
+            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Combs</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Bellybutton</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Vegetables</span>
+            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Chickens</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Cats</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Juice</span>
             <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Cats</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Cats</span>
           </p>
         </div>
@@ -166,12 +166,12 @@ and is wrapped around the whole page content, except for the footer in this exam
         </div>
         <div class="w3-row-padding w3-white">
           <div class="w3-col s6">
-            <p><img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Combs" style="width:100%"></p>
-            <p><img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Chickens" style="width:100%"></p>
+            <p><img src="comb.png" alt="Combs" style="width:100%"></p>
+            <p><img src="comb.png" alt="Chickens" style="width:100%"></p>
           </div>
           <div class="w3-col s6">
-            <p><img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Combs" style="width:100%" class="w3-grayscale"></p>
-            <p><img src="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" alt="Chickens" style="width:100%"></p>
+            <p><img src="comb.png" alt="Combs" style="width:100%" class="w3-grayscale"></p>
+            <p><img src="comb.png" alt="Chickens" style="width:100%"></p>
          </div>
         </div>
       </div>
@@ -229,7 +229,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Footer -->
 <footer class="w3-container w3-dark-grey" style="padding:32px">
   <a href="#" class="w3-button w3-black w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <p>Powered by <a href="https://w7.pngwing.com/pngs/93/406/png-transparent-comb-hair-iron-hairbrush-computer-icons-comb-people-scissors-brush-thumbnail.png" target="_blank">AstridTech</a></p>
+  <p>Powered by <a href="comb.png" target="_blank">AstridTech</a></p>
 </footer>
 
 <script>
