--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,12 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Header -->
   <header class="w3-container w3-center w3-padding-48 w3-white">
+    <img class="w3-image" src="comb.png" style="width:90px;">
     <h1 class="w3-xxxlarge"><b>THE DAILY COMB</b></h1>
     <h6>Welcome to your source of truth</h6>
   </header>
-
-  <!-- Image header -->
+<!-- 
+  <!--
   <header class="w3-display-container w3-wide" id="home">
     <img class="w3-image" src="comb.png" alt="Legitimate Newspaper" width="800" height="200">
     <div class="w3-display-left w3-padding-large">
@@ -44,7 +45,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>DAILY COMB</b></h1>
       <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">SUBSCRIBE</button></h6>
     </div>
-  </header>
+  </header> -->
 
   <!-- Grid -->
   <div class="w3-row w3-padding w3-border">
@@ -60,7 +61,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         </div>
 
         <div class="w3-justify">
-          <img src="TDC4072023.png" alt="Daily Comb Issue 04 Jul 2023"> style="width:100%" class="w3-padding-16">
+          <img src="TDC4072023.png" alt="Daily Comb Issue 04 Jul 2023" style="width:100%" class="w3-padding-16">
           <p><strong>Bellybutton Edition</strong> Bellybuttons</p>
           <p>Bellybuttons</p>
           <p class="w3-left"><button class="w3-button w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like</b></button></p>
