--- a/public/index.html
+++ b/public/index.html
@@ -31,13 +31,12 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-content" style="max-width:1600px">
 
   <!-- Header -->
-  <header class="w3-container w3-center w3-padding-48 w3-white">
-    <img class="w3-image" src="comb.png" style="width:90px;">
-    <h1 class="w3-xxxlarge"><b>THE DAILY COMB</b></h1>
+  <header class="w3-container w3-center w3-padding-40 w3-white">
+    <img class="w3-grayscale" src="comb.png" style="width:90px;" style="height:50px;">
+    <h1 class="w3-xxxxlarge" ><b>THE DAILY COMB</b> </h1>
     <h6>Welcome to your source of truth</h6>
   </header>
 <!-- 
-  <!--
   <header class="w3-display-container w3-wide" id="home">
     <img class="w3-image" src="comb.png" alt="Legitimate Newspaper" width="800" height="200">
     <div class="w3-display-left w3-padding-large">
@@ -56,14 +55,11 @@ and is wrapped around the whole page content, except for the footer in this exam
       <!-- Blog entry -->
       <div class="w3-container w3-white w3-margin w3-padding-large">
         <div class="w3-center">
-          <h3>Bellybutton Now Convex</h3>
-          <h5>Observers have been stunned by recent developments <span class="w3-opacity">July 4nd, 2023</span></h5>
+          <h5><span class="w3-opacity">July 4th, 2023</span></h5>
         </div>
 
         <div class="w3-justify">
           <img src="TDC4072023.png" alt="Daily Comb Issue 04 Jul 2023" style="width:100%" class="w3-padding-16">
-          <p><strong>Bellybutton Edition</strong> Bellybuttons</p>
-          <p>Bellybuttons</p>
           <p class="w3-left"><button class="w3-button w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like</b></button></p>
           <p class="w3-right"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b> <span class="w3-tag w3-white">1</span></button></p>
           <p class="w3-clear"></p>
@@ -88,7 +84,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-col l4">
       <!-- About Card -->
       <div class="w3-white w3-margin">
-        <img src="comb.png" alt="Comb" style="width:100%" class="w3-grayscale">
+        <img src="Team.jpg" alt="Comb" style="width:100%" class="w3-grayscale">
         <div class="w3-container w3-black">
           <h4>The Combers</h4>
           <p>The team exploring Herbert</p>
@@ -112,7 +108,7 @@ and is wrapped around the whole page content, except for the footer in this exam
             <img src="comb.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Round</span>
             <br>
-            <span>They are all extremeley round lol</span>
+            <span>We found the 6 roundest objects around the house</span>
           </li>
           <li class="w3-padding-16">
             <img src="comb.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
@@ -124,7 +120,7 @@ and is wrapped around the whole page content, except for the footer in this exam
             <img src="comb.png" alt="Image" class="w3-left w3-margin-right w3-sepia" style="width:50px">
             <span class="w3-large">Cats</span>
             <br>
-            <span>I love cats</span>
+            <span>What's going on with Chai?</span>
           </li>
         </ul>
       </div>
@@ -167,12 +163,12 @@ and is wrapped around the whole page content, except for the footer in this exam
         </div>
         <div class="w3-row-padding w3-white">
           <div class="w3-col s6">
-            <p><img src="comb.png" alt="Combs" style="width:100%"></p>
-            <p><img src="comb.png" alt="Chickens" style="width:100%"></p>
+            <p><img src="Inspo1.JPG" alt="Combs" style="width:100%" class="w3-grayscale"></p>
+            <p><img src="Inspo2.JPG" alt="Chickens" style="width:100%" class="w3-grayscale"></p>
           </div>
           <div class="w3-col s6">
-            <p><img src="comb.png" alt="Combs" style="width:100%" class="w3-grayscale"></p>
-            <p><img src="comb.png" alt="Chickens" style="width:100%"></p>
+            <p><img src="Inspo3.JPG" alt="Combs" style="width:100%" class="w3-grayscale"></p>
+            <p><img src="Inspo4.jpg" alt="Chickens" style="width:100%" class="w3-grayscale"></p>
          </div>
         </div>
       </div>
